# agent-nerves

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml  reusable-build.yml  stage-build.yml  stage-release-publish.yml  stage-test.yml
agent-nerves/: Cargo.toml
agent-nerves/src/: broker.rs  cluster.rs  config.rs  filter.rs  jetstream.rs  lib.rs  log.rs  main.rs  mcp_server.rs  nats.rs  serve.rs  spine.rs  stream.rs  update.rs  wasm_filter.rs
docs/architecture/: README.md
scripts/: build-release-macos.sh  install.sh  sign-macos.sh  sync-local-release.sh
