[package]
name = "agent-nerves"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-nats = "0.38"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
