[package]
name = "agent-nerves"
version = "0.6.2"
edition = "2021"

[dependencies]
agent-body-core = { git = "https://github.com/autonomic-ai-dev/agent-body" }
anyhow = "1"
async-nats = "0.38"
futures = "0.3"
axum = "0.7"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
dirs = "5"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wasmtime = "28"

[dev-dependencies]
tempfile = "3"
